--- a/about_me.html
+++ b/about_me.html
@@ -14,7 +14,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <!-- CHANGE: Replace "Your Name" with your actual name -->
-            <a href="index.html" class="nav-logo">Ria Khan</a>
+            <a href="index.html" class="nav-logo">Peizhen Li</a>
             <ul class="nav-menu">
                 <li><a href="index.html" class="nav-link">Home</a></li>
                 <li><a href="about_me.html" class="nav-link active">About Me</a></li>
@@ -55,10 +55,11 @@
                         <h3>Professional Background</h3>
                         <!-- CHANGE: Write about your professional journey -->
                         <p>
-                            I started my journey in education by tutoring high school students, where I saw firsthand 
-                            how important clarity and structure are for learning. I later moved into instructional design, 
-                            working on e-learning projects for universities and non-profit programs. My work includes course mapping, 
-                            content development, multimedia integration, and creating assessments that truly measure understanding.
+                            I am an education technologist with a background shaped by multiple education systems and 
+                            a long-standing curiosity about how learning actually happens. My experiences in exam-driven
+                            classrooms and learner-centered environments led me to learning analytics as a way to understand,
+                            visualize, and support learning process beyond grades and test scores. I focus on using data to 
+                            inform inclusive, human-centered instructional design and adaptive learning systems.
                         </p>
                     </div>
                 </div>
@@ -88,10 +89,12 @@
                         <h3>Career Aspirations & Goals</h3>
                         <!-- CHANGE: Write about your career goals -->
                         <p>
-                            Share your career aspirations, what you're working towards, 
-                            and your vision for the future. What impact do you want to make?
-                            What are your short-term and long-term goals? 
-                            Add 3-5 sentences about where you're headed.
+                            My career goal is tp bridge data, design, and pedagogy to creat more inclusive,
+                            personalized learning environments. I aim to work at the intersection of leanring
+                            analytics and instructional deisgn-leveraging data to understand learner behavior,
+                            support self-regulated learning, and inform evidence-based instructional decisions.
+                            Whether through EdTech platforms. research insititutions, or higher eductaion, I hope
+                            to design systems hat not only track learning, but empower it.
                         </p>
                     </div>
                 </div>
@@ -121,9 +124,10 @@
                         <h3>Personal Interests</h3>
                         <!-- CHANGE: Write about your hobbies and interests -->
                         <p>
-                            When I’m not designing learning materials, I enjoy exploring user interface design, 
-                            reading research on digital pedagogy, and experimenting with new learning technologies. 
-                            Outside of work, I love watercolor painting, long walks, and discovering new coffee shops.
+                            Music appears half of my life, I love going to the record stores around the world
+                            while travelling. I am obsessed with different sports with friends as well, running,
+                            playing pickle ball, badminton, swimming... Recently I found out I am actually a coffee
+                            person!
                         </p>
                     </div>
                 </div>
@@ -152,7 +156,7 @@
     <footer class="footer">
         <div class="container">
             <!-- CHANGE: Replace "Your Name" and year -->
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2026 Peizhen Li. All rights reserved.</p>
         </div>
     </footer>
 
