--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                         <div>
                             <h3>Email</h3>
                             <!-- CHANGE: Put your email in both places -->
-                            <a href="mailto:youremail@example.com">youremail@example.com</a>
+                            <a href="mailto:peizhenli723@gmail.com">peizhenli723@gmail.com</a>
                         </div>
                     </div>
                     
@@ -57,7 +57,7 @@
                         <div>
                             <h3>LinkedIn</h3>
                             <!-- Example: https://linkedin.com/in/johnsmith -->
-                            <a href="https://linkedin.com/in/yourprofile" target="_blank">
+                            <a href="www.linkedin.com/in/peizhen-li-156b5427b" target="_blank">
                                 linkedin.com/in/yourprofile
                             </a>
                         </div>
@@ -90,7 +90,7 @@
     <footer class="footer">
         <div class="container">
             <!-- CHANGE: Replace "Your Name" and year -->
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2026 Peizhen Li. All rights reserved.</p>
         </div>
     </footer>
 
