--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
                             <h3>LinkedIn</h3>
                             <!-- Example: https://linkedin.com/in/johnsmith -->
                             <a href="www.linkedin.com/in/peizhen-li-156b5427b" target="_blank">
-                                linkedin.com/in/yourprofile
+                                www.linkedin.com/in/peizhen-li-156b5427b
                             </a>
                         </div>
                     </div>
