--- a/portfolio.html
+++ b/portfolio.html
@@ -446,7 +446,7 @@
     <footer class="footer">
         <div class="container">
             <!-- CHANGE: Replace "Your Name" and year -->
-            <p>&copy; 2024 Your Name. All rights reserved.</p>
+            <p>&copy; 2026 Peizhen Li. All rights reserved.</p>
         </div>
     </footer>
 
