--- a/about_me.html
+++ b/about_me.html
@@ -47,7 +47,7 @@
                         <!-- Ideas: You presenting, at your workspace, -->
                         <!--        at a conference, or your university -->
                         <!-- ========================================== -->
-                        <img src="images/about_professional.jpg" alt="Professional background">
+                        <img src="images/profile.jpg" alt="Professional background">
                     </div>
                     
                     <!-- Text on Right -->
