--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <!-- Type: .jpg or .png -->
                     <!-- Description: Your professional headshot -->
                     <!-- ========================================== -->
-                    <img src="images/profile_photo.jpg" alt="A Photo of Ria Khan">
+                    <img src="images/profile.jpg" alt="Peizhen's headshot">
                 </div>
             </div>
         </div>
